# pid_collisions

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: pidcoll.h
src/: pidcoll.cpp
tests/unit/: CMakeLists.txt  pidcoll_test.cpp
